Tue Mar 15 14:12:35 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/performance-tests/Latency/descriptors/README:
          Fixed typo

        * docs/releasenotes/index.html:
        * docs/releasenotes/switch.html:
        * examples/Display/README.html:
        * examples/Hello/step-by-step.html:
          Updated email address

Fri Mar 11 10:10:20 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Connectors.graffle:
          Added AMI4CCM diagram

Thu Mar 10 11:23:32 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tools/IDL3_to_IDL2/be_sunsoft.cpp:
        * tools/IDL3_to_IDL2/be_helper.cpp:
        * tools/IDL3_to_XMI/be_sunsoft.cpp:
        * tools/IDL3_to_XMI/be_helper.cpp:
          Fixed warnings in the use of printf format.

Wed Mar  9 11:06:52 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender_exec.cpp:
        * connectors/dds4ccm/examples/Hello/DDS_Sender/Hello_Sender.cpp:
          Fixed use of types in printf format.

Sat Mar  5 12:27:55 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Event_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_Event_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_State_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_State_Connector_T.cpp:
          Override all topic_name methods to resolve Intel C++ warnings

Sat Mar  5 09:31:57 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/IDL3_to_IDL2/basic_visitor.cpp:
        * tools/IDL3_to_IDL2/idl3_to_idl2_visitor.cpp:
          Generate space after sequence< to silence Intel C++ warnings

Thu Mar  3 14:26:13 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ciao_dds4ccm.doxygen:
          Ignore DDS_ as prefix

Thu Mar  3 05:03:44 UTC 2011  William R. Otte  <r._w@local>
